@@ -3,7 +3,7 @@ author  = Olaf Alders <olaf@wundercounter.com>
 license = Perl_5
 copyright_holder = Olaf Alders
 copyright_year   = 2014
-version = 0.000001
+version = 0.000002
 
 [GatherDir]
 [PruneCruft]
